[project]
name = "langgraph-async-multiagent"
version = "0.1.0"
description = "Advanced multi-agent debate system with LangGraph, LangChain 0.3, and OpenAI Responses API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.13",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-openai>=0.3.27,<0.4.0",
    "langgraph>=0.4.8,<0.5.0",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.1",
    "nicegui>=1.4.0",
    "pydantic>=2.0.0,<3.0.0",
    "openai>=1.40.0",
]
