[project]
name = "langgraph-async-multiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "langchain>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "numpy>=2.3.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.1",
    "nicegui>=1.4.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0.0",
    "ipython>=8.0.0",
]
